[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=2]

[node name="Projectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -4, -4, 8, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_mask = 2

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
